# tokens

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos.yml  build-windows.yml
docs/: README.md
src/: lib.rs  tokenizer.rs
tests/: split_whitespaces.rs  tokenizer.rs
