[package]
name = "tokens"
version = "0.1.0"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Input tokenizer"
documentation = "https://docs.rs/tokens"
repository = "https://github.com/EngosSoftware/tokens.git"
keywords = ["token", "tokens", "tokenize", "tokenizer"]
edition = "2024"
license = "MIT OR Apache-2.0"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "CODE_OF_CONDUCT.md",
    "manual/"
]
